oem-config (1.52) UNRELEASED; urgency=low

  * Reset debian-installer/country if the language is changed, as otherwise
    we can end up defaulting to an inappropriate country for the language.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 16 Oct 2008 16:30:27 +0100

oem-config (1.51) intrepid; urgency=low

  * Log messages from update-rc.d rather than throwing them away.
  * Fix intltool handling; po/Makefile.in.in was still coming from gettext.
    Pass no-xml to IT_PROG_INTLTOOL so that we don't need to build-depend on
    libxml-parser-perl.
  * Add a comment to /etc/init.d/oem-config to explain the purpose of the
    oem-config-firstboot check.
  * Disable window minimise buttons when running in standalone mode at first
    boot (LP: #249045).
  * Run oem-config in debugging mode if 'debug-oem-config' is set on the
    kernel command line.
  * Update translations from Launchpad.
  * Automatic update of included source packages: user-setup 1.20ubuntu9.

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 12 Oct 2008 21:25:16 +0100

oem-config (1.50) intrepid; urgency=low

  * Change "Automatically sign in" to "Log in automatically", to match
    wording elsewhere (LP: #266995).
  * Automatic update of included source packages: localechooser 2.03ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 16 Sep 2008 12:33:39 +0100

oem-config (1.49) intrepid; urgency=low

  [ Jonathan Riddell ]
  * In oem-config-prepare fix option between kdesu and kdesudo

  [ Colin Watson ]
  * Update check for python-codegen-2.0 to instead use
    pygobject-codegen-2.0. The former disappeared as of pygtk
    2.13.0-0ubuntu1 in favor of this. (From the same change in ubiquity by
    Mario Limonciello.)
  * Build-depend on python-gobject-dev (>= 2.15.1) for
    pygobject-codegen-2.0.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 08 Sep 2008 19:16:43 +0100

oem-config (1.48) intrepid; urgency=low

  * Update oem-config-dm for KDE 4
  * Update kde_ui for intrepid wallpaper